# vidya-multiagent

./: .env.example  .gitignore  Dockerfile  PROJECT_WRITEUP.md  README.md  docker-compose.yml  docker-entrypoint.sh  implementation_plan.md  pyproject.toml  requirements.txt  walkthrough.md
.devcontainer/: devcontainer.json
agents/: __init__.py  career_agent.py  college_agent.py  planner_agent.py  roadmap_agent.py  router_agent.py  scholarship_agent.py  skill_gap_agent.py
data/: careers.json  colleges.json  scholarships.json  skills.json
docs/: antigravity_prompts.md  architecture.md  deployment.md
frontend/: app.py  🧠Vidya.py
frontend/pages/: 1_Chat_Assistant.py  1_💬_Chat_Assistant.py  2_🎯_Career_Explorer.py  3_College_Finder.py  4_Scholarships.py  5_Skill_Gap_Analyzer.py  6_About.py  6_ℹ️_About.py  7_🏗️_Architecture.py
frontend/styles/: theme.css
mcp_server/: __init__.py  config.py  google_tools.py  server.py  tools.py
memory/: __init__.py  memory_manager.py
services/: __init__.py  gemini_service.py
skills/: __init__.py  career_advice_skill.py  college_recommendation_skill.py  roadmap_generation_skill.py  scholarship_finder_skill.py  skill_gap_skill.py
tests/: __init__.py  test_data_loader.py  test_gemini_service.py  test_language.py  test_mcp_tools.py  test_memory.py  test_security.py
utils/: __init__.py  data_loader.py  language.py  pydantic_models.py  security.py
